@@ -1,32 +1,34 @@
 from django.contrib.contenttypes.models import ContentType
 from django.template import Context, Template
 
+# from creme.creme_core.models import SearchConfigItem
 from creme.creme_core.models import (
     FakeContact,
     FakeDocument,
     FakeOrganisation,
     FakeSector,
-    SearchConfigItem,
 )
 from creme.creme_core.tests.base import CremeTestCase
 
 
 class CremeSearchTagsTestCase(CremeTestCase):
     def test_search_form01(self):
-        user = self.get_root_user()
+        # user = self.get_root_user()
         get_ct = ContentType.objects.get_for_model
         contact_ct_id = get_ct(FakeContact).id
 
-        create_sci = SearchConfigItem.objects.create_if_needed
-        create_sci(model=FakeContact,      fields=['last_name', 'first_name'])
-        create_sci(model=FakeOrganisation, fields=['name'])
+        # create_sci = SearchConfigItem.objects.create_if_needed
+        # create_sci(model=FakeContact,      fields=['last_name', 'first_name'])
+        # create_sci(model=FakeOrganisation, fields=['name'])
 
         with self.assertNoException():
             render = Template(
                 r'{% load creme_search %}'
-                r'{% search_form user=user selected_ct_id=ct_id search_terms=terms %}'
+                # r'{% search_form user=user selected_ct_id=ct_id search_terms=terms %}'
+                r'{% search_form models=models selected_ct_id=ct_id search_terms=terms %}'
             ).render(Context({
-                'user': user,
+                # 'user': user,
+                'models': [FakeContact, FakeOrganisation],
                 'terms': ['Acme', 'super2000'],
                 'ct_id': contact_ct_id,
             }))
@@ -67,24 +69,24 @@ class CremeSearchTagsTestCase(CremeTestCase):
             [
                 option_node.attrib.get('value')
                 for option_node in select_node.findall('.//option[@selected=""]')
-            ]
+            ],
         )
 
     def test_search_form02(self):
-        user = self.get_root_user()
-
-        SearchConfigItem.objects.create_if_needed(
-            model=FakeContact,
-            fields=(),
-            role='superuser',
-            disabled=True,
-        )
-        SearchConfigItem.objects.create_if_needed(
-            model=FakeOrganisation,
-            fields=(),
-            role='superuser',
-            disabled=False,
-        )
+        # user = self.get_root_user()
+        #
+        # SearchConfigItem.objects.create_if_needed(
+        #     model=FakeContact,
+        #     fields=(),
+        #     role='superuser',
+        #     disabled=True,
+        # )
+        # SearchConfigItem.objects.create_if_needed(
+        #     model=FakeOrganisation,
+        #     fields=(),
+        #     role='superuser',
+        #     disabled=False,
+        # )
 
         get_ct = ContentType.objects.get_for_model
         contact_ct_id = get_ct(FakeContact).id
@@ -92,9 +94,11 @@ class CremeSearchTagsTestCase(CremeTestCase):
         with self.assertNoException():
             render = Template(
                 r'{% load creme_search %}'
-                r'{% search_form user=user selected_ct_id=None search_terms=terms %}'
+                # r'{% search_form user=user selected_ct_id=None search_terms=terms %}'
+                r'{% search_form models=models selected_ct_id=None search_terms=terms %}'
             ).render(Context({
-                'user': user,
+                # 'user': user,
+                'models': [FakeOrganisation],
                 'terms': ['Acme', 'super2000'],
             }))
 
